--- a/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.scss
+++ b/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.scss
@@ -241,7 +241,7 @@
     }
     .results {
         .content {
-            margin-top: 15px;
+            //margin-top: 15px;
             .regular {
             font-size: 16px;
             .list {
@@ -260,10 +260,10 @@
             }
             .before {
                 display: inline-block;
-                width: 30px;
+                width: 40px;
                 background: #F7F7F7;
                 border-radius: 5px;
-                height: 30px;
+                height: 40px;
                 padding: 5px;
                 margin: 2px;
                 img {
@@ -271,7 +271,7 @@
                     height: auto;
                 }
             }
-            padding: 10px;
+            // padding: 10px;
             .progress {
                 height: 11px;
                 border-radius: 10px;
@@ -285,6 +285,10 @@
                         margin-left: 10%;
                     }
                 }
+            }
+
+            .mt-4{
+                margin-top:  0rem !important;
             }
 
         }
