--- a/src/app/components/seller/seller-form-template/form-template.component.html
+++ b/src/app/components/seller/seller-form-template/form-template.component.html
@@ -6,8 +6,6 @@
                 <div class="col-lg-12 col-sm-12" 
                 *ngFor="let criteria of filterTitleDescription(formData); let index = index;">
                     
-                    {{ print(criteria, criteria) }}
-
                     <p class="title" [class.bordered-top]="index === 2 || index === 3 || index === 4">
                         <span *ngIf="criteria.name_en !== 'Unit Title' &&
                                     criteria.name_en !== 'Write a unique description'"> 
@@ -29,7 +27,7 @@
                             <!-- <span style="height:48px;background-color: #f7f7f7;color: #2c2c2c;"
                                 class="input-group-text mt-3" id="inputGroup-sizing-default">{{getHelperText(criteria.name_en)}}</span> -->
                             <input [value]="getFormValue(criteria.name_en)" placeholder="{{'sell.Unit Title' | translate}}"
-                                (keyup)="onInputNumberChange(criteria.name_en,$event)" style="height:48px; border-radius: 15px;" class="form-control mt-3"
+                                (keyup)="onInputNumberChange(criteria.name_en,$event)" style="height:48px; border-radius: 15px;" class="form-control mt-3 inputPlaceholder"
                                 type="text" min="0" />
                         </div>
                     </ng-template>
@@ -39,7 +37,7 @@
                             <!-- <span style="height:48px;background-color: #f7f7f7;color: #2c2c2c;"
                                 class="input-group-text mt-3" id="inputGroup-sizing-default">{{getHelperText(criteria.name_en)}}</span> -->
                             <input [value]="getFormValue(criteria.name_en)" placeholder="{{'sell.Unit Description' | translate}}"
-                                (keyup)="onInputNumberChange(criteria.name_en,$event)" style="height:96px; border-radius: 15px;" class="form-control mt-3"
+                                (keyup)="onInputNumberChange(criteria.name_en,$event)" style="height:96px; border-radius: 15px;" class="form-control mt-3 inputPlaceholder"
                                 type="text" min="0" />
                         </div>
                     </ng-template>
@@ -48,13 +46,11 @@
                 <!-- Others -->
                 <div class="col-lg-6 col-sm-12" 
                 *ngFor="let criteria of filterOther(formData); let index = index;">
-
-                    
-                    {{ print(criteria, criteria) }}
-
+   
                     <p class="title" [class.bordered-top]="index === 2 || index === 3 || index === 4">
                         <span *ngIf="criteria.name_en !== 'Unit Title' &&
-                                    criteria.name_en !== 'Write a unique description'"> 
+                                    criteria.name_en !== 'Write a unique description' &&
+                                    criteria.icon !== 'upload.svg'"> 
                             
                             <img [src]="getImageSrc(criteria.name_en,formData)"  alt="..."/></span>
                             {{getKeyName(criteria.name_en, formData)}}
@@ -63,30 +59,18 @@
                     <div class="row" [class.bordered]="index === 0 || index === 2 || index === 4">
                         <ng-container
                         [ngTemplateOutlet]="getType(formData, criteria.name_en) === 'dropdownSelect' ? dropdownSelect : 
-                        getType(formData, criteria.name_en) === 'upload' ? imagesUpload : 
                         getType(formData, criteria.name_en) === 'inputNumber' ?  inputNumber : 
                         multiSelectCheckbox"                        
                         
                         [ngTemplateOutletContext]="{key: index}">
                         </ng-container>
                     </div>
-                    
-                    <ng-template #imagesUpload let-key="key">
-                        <div class="imagesUpload">
-                            <button *ngIf="!uploadingPhotos" (click)="uploadingPhotos = !uploadingPhotos;active = 0"
-                                style="background-color: #184D471A;">
-                                {{'sell.unit Photos' | translate}} <img
-                                    src="../../../../assets/images/add-box-line.svg" alt="..."/></button>
-                            <div class="row" *ngIf="imagesPreview() && !uploadingPhotos" style="position: relative;">
-                                <img *ngFor="let item of imagesPreview();let index = index;" src="{{item}}"
-                                    style="width: 70px; height: auto;height:70px; border-radius: 10px;margin-bottom: 10px;padding: 5px;" alt="..."/>
-                            </div>
-                        </div>
-                    </ng-template>
+                  
                     
                     <ng-template #multiSelectCheckbox let-key="key">
                         <div class="col-6 mb-2"
                             *ngFor="let sValue of util.getFilteredValues(criteria.name_en,formData);let i = index;">
+                                                        
                             <input ng-change="false"
                                 (change)="setupFormControlValue($event,criteria.name_en, sValue, checkIsSelected(criteria.name_en, sValue))"
                                 mdbCheckbox type="checkbox" class="btn-check" [id]="criteria.name_en + i" autocomplete="off" />
@@ -112,6 +96,10 @@
                     <ng-template #dropdownSelect let-key="key">
                         <div class="col-6 mb-2"
                             *ngFor="let sValue of util.getFilteredValues(criteria.name_en,formData);let i = index;">
+                            
+                            {{ criteria.name_en === "Floors" ? print(sValue, sValue) : printO("", "") }}
+
+
                             <input ng-change="false"
                                 (change)="setSingleSelect($event,criteria.name_en, sValue, checkIsSelected(criteria.name_en, sValue))"
                                 mdbCheckbox type="checkbox" class="btn-check" [id]="criteria.name_en + i" autocomplete="off" />
@@ -127,11 +115,76 @@
                             <!-- <span style="height:48px;background-color: #f7f7f7;color: #2c2c2c;"
                                 class="input-group-text mt-3" id="inputGroup-sizing-default">{{getHelperText(criteria.name_en)}}</span> -->
                             <input [value]="getFormValue(criteria.name_en)" placeholder="{{'sell.Enter value' | translate}}"
-                                (keyup)="onInputNumberChange(criteria.name_en,$event)" style="height:48px" class="form-control mt-3"
+                                (keyup)="onInputNumberChange(criteria.name_en,$event)" 
+                                (change)="onInputNumberChange(criteria.name_en,$event)"
+                                style="height:48px" class="form-control mt-3 inputPlaceholder"
                                 type="number" min="0" />
                         </div>
                     </ng-template>
 
+                </div>
+
+                <!-- Images Upload -->
+                <div class="col-lg-12 col-sm-12" 
+                *ngFor="let criteria of filterImage(formData); let index = index;">
+                    
+                    <!-- {{ print(criteria, criteria) }} -->
+
+                    <div class="col-lg-12" style="height: 0.25%; margin-top: 2.5%;background: #a29a9a;">  </div> 
+
+                    <div class="col-lg-12" style="display: flex; justify-content: space-between"> 
+                        <p class="title" [class.bordered-top]="index === 2 || index === 3 || index === 4">
+                            <span *ngIf="criteria.icon === 'upload.svg'"> 
+                                
+                                <img [src]="getImageSrc(criteria.name_en,formData)"  alt="..."/></span>
+                                {{getKeyName(criteria.name_en, formData)}}
+                        </p>                        
+                        
+                        <div style="display: flex;"> 
+                            <div class="imagesUpload masterplan" >
+                                <button *ngIf="imagesPreview().length === 0 && !uploadingPhotos" (click)="uploadingPhotos = !uploadingPhotos;active = 0"
+                                    style="background-color: white;
+                                    color: #fd4965;
+                                        border-color: #fd4965;">
+                                    {{'sell.Masterplan' | translate}} </button>
+                            </div> 
+
+                            <div style="width: 10px;"> </div> 
+
+                            <div class="imagesUpload real">
+                                <button *ngIf="imagesPreview().length === 0 && !uploadingPhotos" (click)="uploadingPhotos = !uploadingPhotos;active = 0"
+                                    style="background-color: #fd4965;
+                                        color: white;
+                                        border-color: #fd4965;">
+                                    {{'sell.Real images' | translate}} </button>
+                            </div>    
+                            
+                        </div>
+
+                        <a *ngIf="imagesPreview().length > 0" 
+                            (click)="uploadingPhotos = !uploadingPhotos;active = 0"
+                            style="padding-top:5%; color: #f55441; text-decoration: underline !important;
+                            cursor: pointer;">
+                            {{'sell.View photos' | translate}}    
+                        </a>
+                    </div>
+
+                    <div *ngIf="imagesPreview() && !uploadingPhotos" style="display: flex">
+                        
+                        <span *ngFor="let item of imagesPreview();let index = index;" >
+                            {{ print(item, item) }}
+
+
+                            <img src="{{item['img']}}"
+                            style="width: 70px; height: auto;height:70px; border-radius: 10px;margin-bottom: 10px;padding: 5px;" alt="..."/>
+                            <fa-icon style="font-size:13px; cursor: pointer; vertical-align: top; position: absolute; transform: translateX(-10px);"  [icon]="faTimes" class="user-faTimes"
+                            (click)="deleteImg(item['key'], item['index'])"></fa-icon>
+                            
+                        </span>
+                            
+                        <!-- </div> -->
+                    </div>
+    
                 </div>
             </div>
     </form>
@@ -145,6 +198,9 @@
             <p style="width: 100%;padding: 15px;">{{'sell.photoUpload.Select category' | translate}}</p>
             <li ngbNavItem *ngFor="let ctrl of imagesForm.controls | keyvalue;let index = index;" [ngbNavItem]="index"
                 class="mb-2">
+
+                <!-- {{ print(ctrl, ctrl) }} -->
+
                 <a class="tab-head" #index ngbNavLink>{{keyTranslate(ctrl.key, imgTags)}}</a>
                 <ng-template ngbNavContent>
                     <div class="row content">
