--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -330,8 +330,8 @@
 
                 .applyBtn {
                     height: 50px;
-                    margin-top: 42px;                    // width: 95%;
-                    min-width: 90px;
+                    // margin-top: 16%;
+                    min-width: 150px;
                     border-radius: 10px;
                     &:first-of-type{
                         // margin-left: 5px;
@@ -510,7 +510,7 @@
                     @media (min-width:1170px) and (max-width:1610px)  {
                         display: flex;
                         flex-direction: row;
-                        margin-top: 0;
+                        margin-top: 3%;
                         margin-bottom: 0px;
                         .firstbtn{
                             margin-left: 0;
@@ -788,7 +788,7 @@
     }
     .how-it-works {
         background-color: #f7f7f7;
-        padding-bottom: 50px;
+        padding: 50px 0;
         .card {
             text-align: center;
             border: none;
