--- a/src/styles.scss
+++ b/src/styles.scss
@@ -505,6 +505,7 @@ nz-progress {
         margin: 0;
         margin-top: 20px;
         padding-top: 15px;
+        display: inline-block;
     }
 
     .bordered-top {
@@ -562,23 +563,19 @@ nz-progress {
 
     .imagesUpload {
         button {
-            background-color: #184d471a !important;
-            border: none;
+            // background-color: #184d471a !important;
+            // border: none;
             padding: 10px;
             border-radius: 10px;
             margin: 23px 0px;
-            width: 100%;
+            width: 150px;
             cursor: pointer;
 
-            img {
-                width: 20px;
-                height: 20px;
-                vertical-align: middle;
+            &:hover {
+                // background-color: #fd7363 !important;
             }
 
-            &:hover {
-                background-color: #03201d1a !important;
-            }
+    
         }
     }
 }
@@ -619,14 +616,14 @@ nz-progress {
 
 .sub-head {
     width: 100%;
-    height: 400px;
+    height: 315px;
     background: linear-gradient(to bottom, rgba(24, 77, 71, 0.77), rgba(24, 77, 71, 0.03)),
         url("./assets/images/verne-ho-0LAJfSNa-xQ-unsplash\ \(1\).png");
 
     .title {
         color: #ffffff;
         font-size: 30px;
-        padding: 30px 0px;
+        padding: 30px 0px 0px 0px;
         font-family: "Rubik-bold";
     }
 
@@ -1056,3 +1053,14 @@ span.dropdown-multiselect--active{
     height: fit-content !important;
 }
 
+.stepper-body{
+    margin: 0 !important;
+    padding: 0rem 1rem 0rem 1rem !important; 
+}
+
+.inputPlaceholder{
+    size: 10px;
+    ::placeholder{
+        size: 10px;
+    }
+}
