--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -7,7 +7,7 @@ $active_background: transparent linear-gradient(180deg, #FD4965 0%, #FD7363 100%
     margin: 0px;
     position: absolute;
     will-change: transform;
-    transform: translate(140px, 40px) !important;
+    // transform: translate(140px, 40px) !important;
 }
 // .dropdown-menu.show{
 
