--- a/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
+++ b/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
@@ -111,13 +111,15 @@
                       <div class="content">
                         <div class="row mt-4" style="display: block;">
                           <div [class.mb-4]="i < 4" class="col-4"
-                            *ngFor='let item of getCurrentActiveForm("1") | keyvalue;let i =index;'>
+                            *ngFor='let item of getCurrentActiveForm("1");let i =index;'>
                             <div class="regular" style="width: max-content;">
+                              {{ print(item.name_en, item) }}
+
                               <span class="before" style="background-color: #ffffff;">
-                                <img src="{{getIconUrl('1', item.key)}}" alt="...">
+                                <img src="{{getIconUrl('1', item.name_en)}}" alt="...">
                               </span>
                               
-                                <span *ngFor="let val of getPriorityFormValue(item.value)">
+                                <span *ngFor="let val of getPriorityFormValue(item.name_en)">
                                   {{ val.value ? val.value : activeLang === 'en' ? val.name_en:val.name_ar }}
                                 </span><br>
                               
@@ -141,13 +143,13 @@
                         <div class="content">
                           <div class="row mt-4" style="display: block;">
                             <div [class.mb-4]="i < 5" class="col-4"
-                              *ngFor='let item of getCurrentActiveForm("2") | keyvalue;let i =index;'>
+                              *ngFor='let item of getCurrentActiveForm("2");let i =index;'>
                               <div class="regular" style="width: max-content;">
                                 <span class="before" style="background-color: #ffffff;">
-                                  <img src="{{getIconUrl('2', item.key)}}" alt="...">
+                                  <img src="{{getIconUrl('2', item.name_en)}}" alt="...">
                                 </span>
                                 
-                                  <span *ngFor="let val of getPriorityFormValue(item.value)">
+                                  <span *ngFor="let val of getPriorityFormValue(item.name_en)">
                                     {{ val.value ? val.value : activeLang === 'en' ? val.name_en:val.name_ar }}
                                   </span><br>
                                
@@ -172,13 +174,13 @@
                           <div class="content">
                             <div class="row mt-4" style="display: block;">
                               <div [class.mb-4]="i < 5" class="col-4"
-                                *ngFor='let item of getCurrentActiveForm("3") | keyvalue;let i =index;'>
+                                *ngFor='let item of getCurrentActiveForm("3");let i =index;'>
                                 <div class="regular" style="width: max-content;">
                                   <span class="before" style="background-color: #ffffff;">
-                                    <img src="{{getIconUrl('3', item.key)}}" alt="...">
+                                    <img src="{{getIconUrl('3', item.name_en)}}" alt="...">
                                   </span>
                                   
-                                    <span *ngFor="let val of getPriorityFormValue(item.value)">
+                                    <span *ngFor="let val of getPriorityFormValue(item.name_en)">
                                       {{ val.value ? val.value : activeLang === 'en' ? val.name_en:val.name_ar }}
                                     </span><br>
                                   
@@ -202,18 +204,18 @@
                       <div class="row justify-content-center results">
                         <div class="content">
                           <div class="row mt-4" style="display: block;">
-                            <div [class.mb-4]="i < 3" class="col-4"
-                              *ngFor='let item of getCurrentActiveForm("4") | keyvalue;let i =index;'>
+                            <div [class.mb-4]="i < 5" class="col-4"
+                              *ngFor='let item of getCurrentActiveForm("4");let i =index;'>
                               <!-- {{item | json}} -->
                               <div class="regular"  style="width: max-content;" *ngIf="item.key !== 'Unit photos'">
                                 <span class="before"  style="background-color: #ffffff;">
-                                  <img src="{{getIconUrl('4', item.key)}}" alt="...">
+                                  <img src="{{getIconUrl('4', item.name_en)}}" alt="...">
                                 </span>
-                                <div class="list">
-                                  <span *ngFor="let val of getPriorityFormValue(item.value)">
+                                
+                                  <span *ngFor="let val of getPriorityFormValue(item.name_en)">
                                     {{ val.value ? val.value : activeLang === 'en' ? val.name_en:val.name_ar }}
                                   </span>
-                                </div>
+                                
                               </div>
                             </div>
                           </div>
