--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -643,7 +643,7 @@
 
             </div>
 
-            <div class="col-xs-12 col-lg-2 ngSelect priceRange">
+            <div class="col-6 col-lg-1 ngSelect priceRange">
                 <p class="lable d-none d-lg-block">{{'home.Price range' | translate}}</p>
                 <div class="dropdown" ngbDropdown>
                     <button ngbDropdownToggle [class.dimmed]="(!priceMinRange && !priceMaxRange)" #dropdownMenuButton1
@@ -808,7 +808,7 @@
 
             </div>
 
-            <div class="col-xs-12 col-lg-2 ngSelect price">
+            <div class="col-6 col-lg-1 ngSelect price">
                 <p class="lable d-none d-lg-block">{{'home.Price' | translate}}</p>
                 <div style="margin-left: 10px;">
                     <label class="d-none d-lg-inline-block" style="width:20%;">{{'propertyDetails.EGP' |
