--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -415,7 +415,7 @@
                         }
                     }
                     .setPriceBtn {
-                        background: #fff;
+                        // background: #fff;
                         // border: 1px solid #fa5a64;
                         color: #626265;
                         outline: none;
