--- a/src/app/shared/components/set-priorites/set-priorites.component.html
+++ b/src/app/shared/components/set-priorites/set-priorites.component.html
@@ -1,7 +1,8 @@
 <div class="container--fluid set-priorities">
     <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="rgba(0, 0, 0, 0.0)"   [fullScreen]="true">
         <img class="spinner-img" style='animation:flip-with-scale 3s infinite;position: relative;top:-100px;' src='../../assets/images/logo-loader.png'/>
-    </ngx-spinner>    <div class="head">
+    </ngx-spinner>   
+    <div class="head">
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-xs-12 col-md-10 ">
