Upload Images (Real/Masterplan)

--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -451,6 +451,10 @@
                     <div class="row main-row">
                         <div class="col-1 .d-none .d-sm-block"> </div>
                         <div class="col-lg-6 col-xs-12 mt-3 images-sec">
+
+                            {{ print('here image') }}
+                            {{ print(aboutUs) }}
+
                             <img style="width: 100%;"
                                 src="../../../../assets/images/{{ aboutUs.about_us_image }}" alt="..." />
                         </div>
