--- a/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
+++ b/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
@@ -113,7 +113,7 @@
                           <div [class.mb-4]="i < 4" class="col-4"
                             *ngFor='let item of getCurrentActiveForm("1");let i =index;'>
                             <div class="regular" style="width: max-content;">
-                              {{ print(item.name_en, item) }}
+                              <!-- {{ print(item.name_en, item) }} -->
 
                               <span class="before" style="background-color: #ffffff;">
                                 <img src="{{getIconUrl('1', item.name_en)}}" alt="...">
