--- a/src/app/shared/components/set-priorites/set-priorites.component.scss
+++ b/src/app/shared/components/set-priorites/set-priorites.component.scss
@@ -1,14 +1,14 @@
 .set-priorities {
     .head {
         width: 100%;
-        height: 400px;
+        height: 315px;
         background: linear-gradient(to bottom, rgba(24, 77, 71, 0.77), rgba(24, 77, 71, 0.03)),
             url("../../../../assets/images/verne-ho-0LAJfSNa-xQ-unsplash\ \(1\).png");
 
         .title {
             color: #ffffff;
             font-size: 30px;
-            padding: 30px 0px;
+            padding: 30px 0 0;
             font-family: "Rubik-bold";
         }
         .sm-title {
