--- a/src/app/shared/components/set-priorites/set-priorites.component.scss
+++ b/src/app/shared/components/set-priorites/set-priorites.component.scss
@@ -32,7 +32,7 @@
     .priorites-list {
         .custom-element {
             @media (min-width: 1024px) {
-                width: 16.87%;
+                width: 12%;
             }
             @media only screen and (min-width: 768px) and (max-width: 1024px) {
                 width: 20.87%;
@@ -46,14 +46,57 @@
             border-radius: 20px;
             padding-bottom: 40px;
             @media (min-width: 1024px) {
-                height: 720px;
+                //height: 720px;
             }
             p {
                 color: #2c2c2c;
-                font-size: 16px;
-                padding-top: 30px;
+                font-size: 15px;
             }
-            .box {
+            .priority-header{
+                font-size: 18px;
+                font-weight: bold;
+                padding-top: 30px;
+
+                .high{
+                    color: #28B446;
+                }
+                .medium{
+                    color: #EDA90A;
+                }
+                .low{
+                    color: #FD4965;
+                }
+            }
+
+            .priority-header.high{
+                color: #28B446;
+            }
+            .priority-header.medium{
+                color: #EDA90A;
+            }
+            .priority-header.low{
+                color: #FD4965;
+            }
+
+            .done{
+                display: block;
+                max-width: 100%;
+                width: 100%;
+                color: #FD4965;
+                margin: 50px auto;
+                background-color: #f7e6e9;
+            }
+
+            .edit{
+                display: block;
+                max-width: 100%;
+                width: 100%;
+                color: black;
+                margin: 50px auto;
+                background-color: #E6E6E6;
+            }
+
+            .box.notClicked{
                 max-width: 170px;
                 height: 110px;
                 border: 1px solid #E7E7E7;
@@ -71,7 +114,7 @@
                     width: 40px;
                     height: 40px;
                     vertical-align: text-bottom;
-                    margin-top: 15px;
+                    // margin-top: 15px;
                     background-color: #f7f7f7;
                     border-radius: 10px;
                     img {
@@ -89,13 +132,80 @@
                     color: #a9a9a9;
                     font-size: 13px;
                     display: block;
-                    padding: 10px;
+                    padding: 5px 0px 0px 0px;
                     @media only screen and (min-width: 768px) and (max-width: 1440px) {
                         font-size: 14px;
                         //    display: block;
                     }
                     @media (max-width: 425px) {
                         font-size: 14px;
+                    }
+                }
+
+                .insert {
+                    display: flex;
+                    justify-content: flex-end;
+                    margin: 0px 5px 0px 5px;
+                    fa-icon {
+                        color: #cecece;
+                    }
+                }
+            }
+
+            .box.clicked{
+                max-width: 170px;
+				height: 110px;
+                border: 1px solid #184D47;
+				border-radius: 10px;
+                text-align: center;
+		        margin: auto;
+                background-color: #184d471a;
+                cursor: pointer;
+
+				@media (max-width: 425px) {
+                    max-width: 114px;
+                    height: 95px;
+                }
+	
+                .icon {
+                    display: inline-block;
+                    width: 40px;
+                    height: 40px;
+                    vertical-align: text-bottom;
+                    // margin-top: 15px;
+                    background-color: #f7f7f7;
+                    border-radius: 10px;
+                    img {
+                        display: inline-block;
+                        width: 30px;
+
+                        padding: 9px 5px;
+                    }
+                    @media only screen and (min-width: 768px) and (max-width: 1350px) {
+                        margin-top: 10px;
+                    }
+                    
+                }
+                .text {
+                    color: #a9a9a9;
+                    font-size: 13px;
+                    display: block;
+                    padding: 5px 0px 0px 0px;
+                    @media only screen and (min-width: 768px) and (max-width: 1440px) {
+                        font-size: 14px;
+                        //    display: block;
+                    }
+                    @media (max-width: 425px) {
+                        font-size: 14px;
+                    }
+                }
+
+                .delete {
+                    display: flex;
+                    justify-content: flex-end;
+                    margin: 0px 5px 0px 5px;
+                    fa-icon {
+                        // font-size: 12px;
                     }
                 }
             }
